# clarity

./: Makefile  README.md  TODO.md  clarity-api.service  clarity.service  pyproject.toml  run_clarity.bat  server-instructions.md
clarity/: api.py  directus_schema.json  main.py  prompts.py  usage.py
scripts/: deploy_api_server.sh  setup_https_proxy.sh
tests/: test_fmt.py
