[project]
name = "clarity"
version = "0.1.0"
description = "A simple AI-powered text correction tool."
authors = [{ name = "ajweeks", email = "contact@ajweeks.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "WTFPL"
dependencies = [
    "openai>=1.41.1,<2",
    "anthropic>=0.34.1,<0.35",
    "streamlit>=1.37.1,<2",
    "fastapi>=0.116.1,<0.117",
    "uvicorn>=0.35.0,<0.36",
    "tiktoken>=0.6.0,<0.7",
    "python-dotenv>=1.0.1",
]

[project.scripts]
clarity = "clarity.cli:cli"
clarity-api = "clarity.api:serve"

[dependency-groups]
dev = [
    "ipykernel>=6.29.4,<7",
    "pre-commit>=3.7.0,<4",
    "pytest>=8.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["clarity"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
